syntax = "proto3";
option go_package = "./pb";
import "proto/memory_message.proto";
import "proto/processor_message.proto";
import "proto/screen_message.proto";
import "proto/keyboard_message.proto";
import "proto/storage_message.proto";
import "google/protobuf/timestamp.proto";

message Laptop {
  string id = 1;
  string brand = 2;
  string name = 3;
  CPU cpu = 4;
  Memory memory = 5;
  repeated GPU gpu = 6; // repeated 뜻: 배열
  repeated Storage storage = 7;
  Screen screen = 8;
  Keyboard keyboard = 9;
  oneof weight {
    double weight_kg = 10;
    string weight_lbs = 11;
  } // oneof 뜻: 둘 중 하나만 사용
  double price_usd = 12;
  string release_year = 13;
  google.protobuf.Timestamp updated_at = 14;
}